--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -44,6 +44,9 @@
     "lengthPhoneRequired": "Maximum length is 20 characters",
     "dateInPast": "Please choose a date in the past",
     "maxLengthAvtName": "Maximum length is 1000 characters",
-    "maxLengthAvtSize": "Maximum file size is 1 MB. Format: .JPG, .JPEG, .PNG"
+    "maxLengthAvtSize": "Maximum file size is 1 MB. Format: .JPG, .JPEG, .PNG",
+    "oldPassword": "Old password",
+    "newPassword": "New password",
+    "confirmNewPassword": "Confirm new password"
   }
 }
