--- a/src/locales/vi/home.json
+++ b/src/locales/vi/home.json
@@ -44,6 +44,9 @@
     "lengthPhoneRequired": "Độ dài tối đa là 20 ký tự",
     "dateInPast": "Hãy chọn ngày ở quá khứ",
     "maxLengthAvtName": "Độ dài tối đa là 1000 kí tự",
-    "maxLengthAvtSize": "Dung lượng file tối đa 1 MB. Định dạng: .JPG,.JPEG, .PNG"
+    "maxLengthAvtSize": "Dung lượng file tối đa 1 MB. Định dạng: .JPG,.JPEG, .PNG",
+    "oldPassword": "Mật khẩu cũ",
+    "newPassword": "Mật khẩu mới",
+    "confirmNewPassword": "Xác nhận mật khẩu"
   }
 }
