--- a/src/locales/vi/home.json
+++ b/src/locales/vi/home.json
@@ -22,7 +22,9 @@
     "keyWord": "Từ khóa",
     "callToBuy": "Gọi mua hàng",
     "cart": "Giỏ hàng",
-    "brachs": "Chi nhánh"
+    "brachs": "Chi nhánh",
+    "homePage": "Trang chủ",
+    "products": "Sản phẩm"
   },
   "Policy": {
     "safe": "Sản phẩm an toàn",
