--- a/src/locales/vi/home.json
+++ b/src/locales/vi/home.json
@@ -68,5 +68,15 @@
     "sortedByDescendingPrice": "Giá giảm dần",
     "off": "Giảm",
     "sold": "Đã bán"
+  },
+  "Contact": {
+    "contactInfo": "Thông tin liên hệ",
+    "address": ["Địa chỉ", "70 Lữ Gia, Phường 15, Quận 11, TP.HCM"],
+    "workingTime": ["Thời gian làm việc", "8h - 22h Từ thứ 2 đến chủ nhật"],
+    "contactUs": "Liên hệ với chúng tôi",
+    "anyQuestions": "Nếu bạn có thắc mắc gì, có thể gửi yêu cầu cho chúng tôi, và chúng tôi sẽ liên lạc lại với bạn sớm nhất có thể.",
+    "fullName": "Học và tên",
+    "message": "Thắc mắc",
+    "send": "Gửi"
   }
 }
