--- a/src/locales/en/home.json
+++ b/src/locales/en/home.json
@@ -24,7 +24,8 @@
     "cart": "Cart",
     "brachs": "Brachs",
     "homePage": "Home Page",
-    "products": "Products"
+    "products": "Products",
+    "contact": "Contact"
   },
   "Policy": {
     "safe": "Safe products",
@@ -68,5 +69,17 @@
     "sortedByDescendingPrice": "High to Low",
     "off": "Sale off",
     "sold": "Sold"
+  },
+  "Cart": {
+    "cartTitle": "My Cart",
+    "cartDescription": "My shopping cart",
+    "products": "Products",
+    "selectAllProducts": "Select all products",
+    "deleteProducts": "Delete",
+    "totalPayment": "Total Payment",
+    "saving": "Saving",
+    "buyProducts": "Buy",
+    "buyNow": "Buy Now",
+    "cartEmpty": "Cart is empty"
   }
 }
